# polousers

./: .gitignore  ldapsample.py  requirements.txt  setup.py
certs/: client.crt  client.csr  client.key  device.key  malote.key  malote.pem  rootCA.pem  server.csr
client/: README.md  setup.cfg  setup.py
client/daemon/python2/systemd/: minute-timer-polousers.target  minute-timer-polousers.timer  polousersd.service
client/daemon/python2/systemv/: polousersd
client/daemon/python2/twistd/: polousers_twistd.tac
client/daemon/python3/systemd/: minute-timer-polousers.target  minute-timer-polousers.timer  polousers.service
client/daemon/python3/systemv/: polousersd
client/etc/openldap/: ldap.conf
client/etc/pam.d/: passwd  su-l
client/etc/polohomedir/: polousers.cfg
client/etc/polohomedir/certs/: device.crt  device.csr  rootCA.key
client/polousers/: clientssl.py  conf.py
conffiles/etc/: nslcd.conf
conffiles/etc/pam.d/: system-login
cppbinding/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  marcobinding
cppbinding/include/: createdirs.h  marcobinding.h
cppbinding/src/: JSONValue.cpp  createdirs.cpp  marcobinding.cpp  pam_polousers.cpp  test.cpp
createdirs/: CMakeLists.txt
createdirs/client/: client.py  clientssl.py
createdirs/client/env/: pip-selfcheck.json
daemon/python2/systemv/: polousersd
daemon/python2/twistd/: polousers_twistd.tac
daemon/python3/systemd/: polousers.service
daemon/python3/systemv/: polousersd
doc/: includes.tex  polousers.bib  polousers.tex  references.txt
doc/doxygen/: Doxyfile
doc/latex.old/: latexmkrc  polousers.tex
doc/latex/src/: pam_mkpolohomedir.c
doc/software-engineering/: make.bat
doc/software-engineering/source/: conf.py  conf.py~  index.rst  index.rst~  intro.rst~  polousers.vpp
doc/software-engineering/source/analysis/: actors.rst  domain.rst  fr.rst  goals.rst  intro.rst  ir.rst  nfr.rst
doc/software-engineering/source/design/: procedimental.rst  tests.rst
doc/software-engineering/source/project_mgmt/: intro.rst
doc/sphinx/: make.bat
doc/sphinx/source/: conf.py  description.rst  index.rst
doc/sphinx/source/reference/: intro.rst
doc/sphinx/source/reference/pi_pam_mkhomedirs/: conf.rst  createdirs.rst  intro.rst  pam_mkpolohomedir.rst
doc/sphinx/source/reference/polousers/: clientssl.rst  intro.rst
doc/sphinx/source/software_engineering/: polousers.vpp~25  polousers.vpp~26
doc/sphinx/source/software_engineering/analysis/: activity.rst  actors.rst  domain.rst  fr.rst  goals.rst  ir.rst  nfr.rst  static.rst  uc.rst
doc/sphinx/source/software_engineering/design/: architecture.rst  data.rst  intro.rst  procedimental.rst  scope.rst  static.rst  tests.rst
doc/sphinx/source/software_engineering/project_mgmt/: intro.rst
etc/polohomedir/certs/: rootCA.srl  server.crt  server.key
install/: install.sh
marcobinding/: CMakeLists.txt
marcobinding/include/: JSON.h  JSONValue.h  conf.h  createdirs.h  marcoexception.h
marcobinding/src/: createdirs.cpp  main.cpp  marcobinding.cpp  pam_mkhomedir.c  pam_mkpolohomedir.c  test.cpp
marcobinding2/: CMakeLists.txt
marcobinding2/include/: marcobinding.h  marcotypes.h  testpolo.h
marcobinding2/src/: main.c  marcobinding.cpp  marcoexception.cpp
master/: master.py
pam.d/: su
pam_mkhomedirs/: CMakeLists.txt
pam_mkhomedirs-stable/src/: createdirs.cpp  marcobinding.cpp  pam_mkpolohomedir.c  test.cpp
pam_mkhomedirs/include/: createdirs.h  marcobinding.h  testpolo.h
pam_mkhomedirs/src/: marcobinding.cpp  test.cpp  testpolo.cpp
pam_module/etc.sample/pam.d/: system-auth
pam_module/pi_pam_mkhomedirs/: CMakeLists.txt
pam_module/pi_pam_mkhomedirs/include/: conf.h  createpolodir.h
pam_module/pi_pam_mkhomedirs/src/: createpolodir.cpp  pam_mkpolohomedir.c  test.cpp
pam_module/utils/: install.sh
pammodule/: CMakeLists.txt
pammodule/include/: conf.h
pammodule/src/: pam_mkpolohomedir.c
pammodulenew/: CMakeLists.txt
pammodulenew/include/: createdirs.h
pammodulenew/src/: createdirs.cpp  pam_mkpolohomedir.c
pammodulenew2/: CMakeLists.txt
pammodulenew2/include/: testpolo.h
pammodulenew2/src/: pam_mkpolohomedir.c  testpolo.c  testpolo.cpp
pammodulerapidjson/: CMakeLists.txt
pammodulerapidjson/src/: createdirs.cpp  pam_mkpolohomedir.c  testpolo.cpp
pi_pam_mkhomedirs/: CMakeLists.txt
pi_pam_mkhomedirs/include/: JSON.h  JSONValue.h  createdirs.h  marcobinding.h  marcoexception.h
pi_pam_mkhomedirs/src/: createdirs.cpp  createpolodir.cpp  marcobinding.cpp  marcoexception.cpp  pam_mkpolohomedir.c  testpolo.cpp
polousers/: __init__.py  client.py  clientssl.py  conf.py  requirements.txt
polousers/daemon/: polousers.service  polousersstop.py
polousers_conf/: conf.py
slave/: slave.py
sysfiles/skel/apache-tomcat-7.0.62/conf/: server.xml
