CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( CREATEDIRS_TEST )

SET( CREATEDIRS_TEST_SRC
  ${CMAKE_SOURCE_DIR}/src/createdirs.cpp
  ${CMAKE_SOURCE_DIR}/src/marcobinding.cpp
  ${CMAKE_SOURCE_DIR}/src/marcoexception.cpp
  ${CMAKE_SOURCE_DIR}/src/JSON.cpp
  ${CMAKE_SOURCE_DIR}/src/JSONValue.cpp
  ${CMAKE_SOURCE_DIR}/src/utf8.c

  )

INCLUDE_DIRECTORIES( "${CMAKE_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
INCLUDE_DIRECTORIES(${PAM_INCLUDE_DIR})

ADD_EXECUTABLE( createdirs_test ${CREATEDIRS_TEST_SRC})
TARGET_LINK_LIBRARIES( createdirs_test ${PAM_LIBRARIES})
find_package(RapidJSON)
