CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( MARCOCPPBINDING )
find_package(RapidJSON)
SET( MARCOCPPBINDING_SRCS
  #${CMAKE_SOURCE_DIR}/src/test.cpp
  ${CMAKE_SOURCE_DIR}/src/main.cpp

  #${CMAKE_SOURCE_DIR}/src/createdirs.cpp
  ${CMAKE_SOURCE_DIR}/src/marcobinding.cpp
  ${CMAKE_SOURCE_DIR}/src/marcoexception.cpp
  ${CMAKE_SOURCE_DIR}/src/JSON.cpp
  ${CMAKE_SOURCE_DIR}/src/JSONValue.cpp
  #${CMAKE_SOURCE_DIR}/src/utf8.c
  #${CMAKE_SOURCE_DIR}/src/pam_mkpolohomedir.c
  #${CMAKE_SOURCE_DIR}/src/pam_mkhomedir.c

  )


INCLUDE_DIRECTORIES( "${CMAKE_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
INCLUDE_DIRECTORIES(${PAM_INCLUDE_DIR})

ADD_EXECUTABLE( marcobindingtest ${MARCOCPPBINDING_SRCS})
TARGET_LINK_LIBRARIES( marcobindingtest ${RAPIDJSON_LIBRARIES})

