CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( MARCOCPPBINDING )
find_package(RapidJSON)
SET( MARCOCPPBINDING_SRCS
  ${CMAKE_SOURCE_DIR}/src/main.c
  ${CMAKE_SOURCE_DIR}/src/marcobinding.cpp
  ${CMAKE_SOURCE_DIR}/src/marcoexception.cpp
  ${CMAKE_SOURCE_DIR}/src/JSON.cpp
  ${CMAKE_SOURCE_DIR}/src/JSONValue.cpp
  ${CMAKE_SOURCE_DIR}/src/utf8.c
  )

INCLUDE_DIRECTORIES( "${CMAKE_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
INCLUDE_DIRECTORIES( ${RAPIDJSON_INCLUDE_DIRS} )

ADD_EXECUTABLE( testmarco ${MARCOCPPBINDING_SRCS})

